almost all done commit